// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CatalogTreeTableRow /> should return added styles for a row that is added 1`] = `
<FontAwesomeIcon
  beat={false}
  beatFade={false}
  border={false}
  bounce={false}
  className="icon plus"
  fade={false}
  fixedWidth={false}
  flip={null}
  icon={
    Object {
      "icon": Array [
        448,
        512,
        Array [
          10133,
          61543,
          "add",
        ],
        "2b",
        "M432 256c0 17.69-14.33 32.01-32 32.01H256v144c0 17.69-14.33 31.99-32 31.99s-32-14.3-32-31.99v-144H48c-17.67 0-32-14.32-32-32.01s14.33-31.99 32-31.99H192v-144c0-17.69 14.33-32.01 32-32.01s32 14.32 32 32.01v144h144C417.7 224 432 238.3 432 256z",
      ],
      "iconName": "plus",
      "prefix": "fas",
    }
  }
  inverse={false}
  listItem={false}
  mask={null}
  maskId={null}
  pull={null}
  pulse={false}
  rotation={null}
  shake={false}
  size="2x"
  spin={false}
  swapOpacity={false}
  symbol={false}
  title=""
  titleId={null}
  transform={null}
/>
`;

exports[`<CatalogTreeTableRow /> should return added styles for a row that is both added and updated 1`] = `
<FontAwesomeIcon
  beat={false}
  beatFade={false}
  border={false}
  bounce={false}
  className="icon plus"
  fade={false}
  fixedWidth={false}
  flip={null}
  icon={
    Object {
      "icon": Array [
        448,
        512,
        Array [
          10133,
          61543,
          "add",
        ],
        "2b",
        "M432 256c0 17.69-14.33 32.01-32 32.01H256v144c0 17.69-14.33 31.99-32 31.99s-32-14.3-32-31.99v-144H48c-17.67 0-32-14.32-32-32.01s14.33-31.99 32-31.99H192v-144c0-17.69 14.33-32.01 32-32.01s32 14.32 32 32.01v144h144C417.7 224 432 238.3 432 256z",
      ],
      "iconName": "plus",
      "prefix": "fas",
    }
  }
  inverse={false}
  listItem={false}
  mask={null}
  maskId={null}
  pull={null}
  pulse={false}
  rotation={null}
  shake={false}
  size="2x"
  spin={false}
  swapOpacity={false}
  symbol={false}
  title=""
  titleId={null}
  transform={null}
/>
`;

exports[`<CatalogTreeTableRow /> should return change background color and override icon color with relevant icon if selected for bulk edit 1`] = `null`;

exports[`<CatalogTreeTableRow /> should return change background color with relevant icon if selected for bulk edit 1`] = `null`;

exports[`<CatalogTreeTableRow /> should return removed styles for a row that is removed 1`] = `
<FontAwesomeIcon
  beat={false}
  beatFade={false}
  border={false}
  bounce={false}
  className="icon minus"
  fade={false}
  fixedWidth={false}
  flip={null}
  icon={
    Object {
      "icon": Array [
        448,
        512,
        Array [
          8722,
          10134,
          8211,
          "subtract",
        ],
        "f068",
        "M400 288h-352c-17.69 0-32-14.32-32-32.01s14.31-31.99 32-31.99h352c17.69 0 32 14.3 32 31.99S417.7 288 400 288z",
      ],
      "iconName": "minus",
      "prefix": "fas",
    }
  }
  inverse={false}
  listItem={false}
  mask={null}
  maskId={null}
  pull={null}
  pulse={false}
  rotation={null}
  shake={false}
  size="2x"
  spin={false}
  swapOpacity={false}
  symbol={false}
  title=""
  titleId={null}
  transform={null}
/>
`;

exports[`<CatalogTreeTableRow /> should return updated styles for a row that is updated 1`] = `
<div
  className="icon changed"
>
  <ModificationIcon
    color="modificationIconColor"
  />
</div>
`;
